--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yellow Book</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="page-wrapper">
       <header class="header-wrapper">
-        <h1 class="header">System/360 Reference Data</h1>
+        <h1 class="header">System/370 Reference Data</h1>
       </header>
 
       <section class="panel">
@@ -52,7 +58,7 @@
               <th>Name</th>
               <th>Format</th>
               <th>Operands</th>
-              <th>Flags</th>
+              <th>Notes</th>
             </tr>
           </thead>
           <tbody id="tbody"></tbody>
