--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yellow Book</title>
+    <title>Yellow Card</title>
     <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +15,7 @@
   <body>
     <div class="page-wrapper">
       <header class="header-wrapper">
-        <h1 class="header">System/370 Reference Data</h1>
+        <h1 class="header">System/370 Machine Instructions</h1>
       </header>
 
       <section class="panel">
@@ -82,6 +82,37 @@
           </thead>
           <tbody id="tbody"></tbody>
         </table>
+      </section>
+      <section class="panel panel-small">
+        <div class="panel-title">Footnotes</div>
+        <p>
+          <b>c.</b>
+          Condition code set.
+        </p>
+        <p>
+          <b>i.</b>
+          Interruptible instruction.
+        </p>
+        <p>
+          <b>n.</b>
+          New condition code loaded.
+        </p>
+        <p>
+          <b>p.</b>
+          Privileged instruction.
+        </p>
+        <p>
+          <b>q.</b>
+          Semiprivileged instruction.
+        </p>
+        <p>
+          <b>x.</b>
+          Execution in problem state and supervisor state differs.
+        </p>
+        <p>
+          <b>y.</b>
+          Condition code may be set.
+        </p>
       </section>
     </div>
   </body>
